code updated with popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="row justify-content-center align-items-center h-25">
-    <div class="col-7 text-center">
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center w-100 h-25">
+    <div class="col-12 text-center">
         <h1>LET'S PLAY</h1>
         <h5>Use 
           <i class="material-icons arrows">arrow_upward</i>
@@ -13,7 +13,7 @@
 </div>
 
   <div class="row justify-content-center align-items-center" style="height:75vh">
-    <div class="col-8 text-center">
+    <div class="col text-center">
       <app-maze-box></app-maze-box>
     </div>
   </div>
